# UniCodec

./: pyproject.toml
decoder/: __init__.py  experiment.py  experiment_contrastive.py  feature_extractors.py  loss.py  models.py  pretrained.py  pretrained_model.py
encoder/modules/: gating.py
encoder/quantization/: simvq_moe.py
tests/: test_simvq.py
unicodec/: __init__.py  config.py  pretrained.py
unicodec/configs/: __init__.py  unicodec_frame75_10s_nq1_code16384_dim512_acousitic.yaml  unicodec_frame75_10s_nq1_code16384_dim512_finetune.yaml  unicodec_frame75_10s_nq1_code16384_dim512_semantic.yaml
